--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,13 @@ chromadb = "^0.5.18"
 pypdf = "^5.1.0"
 tqdm = "^4.67.0"
 iprogress = "^0.4"
+seaborn = "^0.13.2"
+langchain-google-genai = "^2.0.4"
+openai = "^1.54.4"
+langchain-openai = "^0.2.8"
+python-dotenv = "^1.0.1"
+ragas = "^0.2.5"
+nltk = "^3.9.1"
 
 
 [build-system]
